# nuefi

./: Cargo.toml  Justfile  README.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: base.rs  error.rs  extra.rs  lib.rs  proto.rs  table.rs  util.rs
core/src/proto/: device_path.rs  shell.rs
core/src/proto/device_path/: nodes.rs  types.rs
core/src/proto/shell/: raw.rs
core/src/table/: boot_fn.rs  config.rs  mem.rs
macros/: Cargo.toml  Justfile
macros/src/: compat.rs  entry.rs  guid.rs  imp.rs  lib.rs  proto.rs
macros/tests/: proto1-fail.rs  proto1-fail.stderr  proto1-pass.rs  sig-fail.rs  sig-pass.rs  sig1-fail.rs  sig1-fail.stderr  sig1-pass.rs  sig2-fail.rs  sig2-fail.stderr  sig2-pass.rs  sig3-fail.rs  sig3-fail.stderr  sig3-pass.rs  sig4-fail.rs  sig4-fail.stderr  sig5-fail.rs  sig5-fail.stderr  sig6-fail.rs  sig6-fail.stderr  sig7-fail.rs  sig7-fail.stderr  test.rs
macros/tests/entry/fail/: duplicate.rs  duplicate.stderr  empty.stderr  extra.stderr  log.rs  log.stderr  method.rs  method.stderr  missing.stderr  sig3-fail.stderr  sig6-fail.stderr  sig7-fail.rs  unexpected_types.rs  unexpected_types.stderr  unexpected_values.rs  unexpected_values.stderr
macros/tests/entry/pass/: advanced.rs_  basic.rs  log.rs  sig2-pass.rs
macros/tests/generic/fail/: empty.rs  empty.stderr  extra_crate.rs  extra_crate.stderr
macros/tests/guid/fail/: invalid_guid.rs  invalid_guid.stderr
macros/tests/proto/fail/: invalid_guid.stderr
macros/tests/proto/pass/: basic.rs
nuefi/: Cargo.toml
nuefi/src/: handlers.rs  lib.rs  logger.rs  mem.rs  proto.rs  string.rs  table.rs  util.rs
nuefi/src/proto/: console.rs  device_path.rs  edid.rs  graphics.rs  loaded_image.rs  media.rs
nuefi/src/proto/console/: raw.rs
nuefi/src/proto/device_path/: raw.rs
nuefi/src/proto/edid/: raw.rs
nuefi/src/proto/graphics/: raw.rs
nuefi/src/proto/loaded_image/: raw.rs
nuefi/src/proto/media/: raw.rs
nuefi/src/proto/platform_init/: security.rs
nuefi/src/proto/platform_init/security/: raw.rs
nuefi/src/table/: boot.rs  config.rs  raw.rs  runtime.rs
nuefi/src/tests/: mock.rs
nuefi/src/tests/mock/: boot.rs  console.rs  system.rs
self-tests/: Cargo.toml
self-tests/src/: main.rs  tests.rs
self-tests/src/tests/: basic.rs
test-runner/: Cargo.toml
test-runner/src/: main.rs
uefi/: Cargo.toml
uefi/src/: alloc.rs  error.rs  handlers.rs  lib.rs  logger.rs  mem.rs  proto.rs  string.rs  table.rs  util.rs
uefi/src/proto/: console.rs  device_path.rs  graphics.rs  loaded_image.rs  media.rs  platform_init.rs  vendor.rs
uefi/src/proto/console/: raw.rs
uefi/src/proto/device_path/: raw.rs
uefi/src/proto/graphics/: raw.rs
uefi/src/proto/loaded_image/: raw.rs
uefi/src/proto/media/: raw.rs
uefi/src/proto/platform_init/: security.rs
uefi/src/table/: raw.rs
