[package]
name = "nuefi_macros"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
nuuid = { version = "0.4.6", default-features = false }
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "fold", "extra-traits"] }

[dev-dependencies]
log = { version = "0.4.17", default-features = false }
trybuild = { version = "1.0.77", features = ["diff"] }
uefi = { path = "../nuefi", package = "nuefi" }
