[package]
name = "nuefi_macros"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
nuuid = { version = "0.4.6", default-features = false }
quote = "1.0.29"
syn = { version = "1.0.109", features = [
    "full",
    "fold",
    "visit",
    "extra-traits",
] }

[dev-dependencies]
log = { version = "0.4.19", default-features = false }
trybuild = { version = "1.0.81", features = ["diff"] }
nuefi = { path = "../nuefi" }
nuefi_core = { path = "../core" }
