[package]
name = "self-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
nuefi = { path = "../nuefi" }
nuuid = { version = "0.5.0", default-features = false }
# Required so nuuid doesn't fail to compile
sha-1 = { version = "0.10.1", default-features = false, features = [
    "force-soft",
] }
