[package]
name = "uefi"
version = "0.1.0"
authors = ["Diana"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
log = "0.4.17"
macros = { path = "../macros" }
nuuid = { version = "0.4.6", default-features = false }
# Required so nuuid doesn't fail to compile
sha-1 = { version = "0.10.0", default-features = false, features = [
    "force-soft",
] }
